--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -8,7 +8,7 @@
 favicon: /assets/img/favicon.ico
 
 # Agency logo
-agency-logo: /do-not-touch/logo_blueprint.png
+agency-logo: /images/ca_logo.PNG
 
 # Google analytics
 google-analytics: UA-test
