--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -27,7 +27,7 @@ button:
     url: /who-we-are/
 
 # Hero Dropdown Main Text
-# hero-dropdown-text: "I am a"
+hero-dropdown-text: "I am a"
 
 # I want to dropdown
 i-want-to:
