--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -26,23 +26,16 @@ button:
   - text: Learn More
     url: /who-we-are/
 
-# Hero Dropdown Main Text
-hero-dropdown-text: "I am a"
+# Hero Dropdown Main Tex
+#hero-dropdown-text: "I am a"
 
 # I want to dropdown
-i-want-to:
-  - title: apply for licence
-    url: /application-guidelines/applying-for-licence/
-  - title: cancel hotel licence
-    url: /application-guidelines/cancellation-of-licence/
-  - title: change hotel keeper
-    url: /application-guidelines/change-of-hotel-keeper/
-  - title: change hotel name
-    url: /application-guidelines/change-of-hotel-name/
-  - title: apply for exemption for hotel licence
-    url: /application-guidelines/exemption/
-  - title: renew hotel licence
-    url: /application-guidelines/renew-hotel-licence/
+#i-want-to:
+#  - title: apply for licence
+#    url: /application-guidelines/applying-for-licence/
+#  - title: cancel hotel licence
+#    url: /application-guidelines/cancellation-of-licence/
+
 
 # Key Highlights
 key-highlights:
