--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,15 @@
 # you will see them accessed via {{- site.title -}}, {{- site.email -}}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{- site.myvariable -}}.
-title: Isomer Pages Template
-title-abbreviated: Isomer Pages
+title: Cabinet de Avocatură Saveli Andreea
+title-abbreviated: Cab. Av. Saveli Andreea
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This website was built using the Isomer Design System and Jekyll
+  This website was built using Jekyll
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://www.tech.gov.sg" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://www.baroul-bucuresti.ro" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: *
+github_username:  *
 
 # Build settings
 markdown: kramdown
