--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   This website was built using Jekyll
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.baroul-bucuresti.ro" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: *
-github_username:  *
+twitter_username: twitter
+github_username:  github
 
 # Build settings
 markdown: kramdown
