--- a/_config.yml
+++ b/_config.yml
@@ -63,10 +63,10 @@ homepage_resources: true
 homepage_careers: true
 
 # Feedback Form URL
-feedback_form_url: "https://form.sg/#!/forms/govtech/5a9ce876b3a3b6006e6b8335"
+feedback_form_url: "https://forms.gle/JuKGzQZyv924RDNw8"
 
 # FAQ URL
-faq_url: "http://www.ifaq.gov.sg/HLB/apps/Fcd_faqmain.aspx"
+faq_url: false
 faq_url_external: true
 
 # Custom CSS file path
